Fix layout issues

--- a/style.css
+++ b/style.css
@@ -75,12 +75,7 @@
     }
 
     /* Specific Classes */
-    .left {
-        flex: 4;
-    }
-    
     .right {
-        flex: 2;
         display: flex;
         flex-direction: column;
     }
@@ -103,13 +98,17 @@
 
     /* Jobs */
     .job:not(:last-child) {
-        margin-bottom: 30px;
+        margin-bottom: 25px;
     }
 
     .job-heading.title,
     .job-heading.title span {
         font-weight: 600;
         font-size: 15px;
+    }
+
+    .job-heading.title span {
+        font-size: 17px;
     }
 
     .job-heading.date {
@@ -163,8 +162,8 @@
 
     /* Icons */
     .icon {
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
     }
 
     /* Skills */
@@ -518,6 +517,14 @@
         font-size: 2.5em;
     }
 
+    .left {
+        flex: 5;
+    }
+    
+    .right {
+        flex: 3;
+    }
+
     .toggle {
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -588,11 +595,11 @@
     }
 
     .left {
-        flex: 5;
+        flex: 2;
     }
 
     .right {
-        flex: 3;
+        flex: 1;
         padding-left: 30px;
         white-space: nowrap;
         justify-content: flex-start;
